--- a/src/components/Invitations/invitation.css
+++ b/src/components/Invitations/invitation.css
@@ -6,11 +6,19 @@
 .invitation .head{
     display: flex;
     justify-content: space-between;
-    padding: 1rem 0.2rem 0;
-    border: 1px solid gray;
+    padding: 1rem 0.2rem 0.2rem;
+    border: 1px solid #006633;
+    align-items: flex-end;
 }
 .invitation .head h5{
+    font-size: 1.5rem;
+    color: #006633;
+    font-weight: 500;
+}
+.invitation .head .see-all-link{
     font-size: 1.2rem;
+    text-decoration: none;
+    color: #006633;
 }
 .invitation .content{
     display: flex;
@@ -24,15 +32,15 @@
     flex-basis: 50%;
 }
 .invitation .content img{
-    width: 4rem;
-    height: 4rem;
+    width: 5rem;
+    height: 5rem;
     border-radius: 50%;
 }
 .invitation .content .username{
     color: #006633;
     text-decoration: none;
     font-weight: 700;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
 }
 .invitation .content p{
     color: gray;
@@ -40,26 +48,24 @@
 .invitation .ignore-option{
     color:gray;
     text-decoration: none;
-    font-weight: 700;
+    font-size: 1.3rem;
+    font-weight: 500;
 }
 .invitation .accept-option{
-    color: #006633;
+    color: white;
     text-decoration: none;
     border: 1px solid #006633;
     display: inline-block;
-    padding: 0.1rem 0.8rem;
-    border-radius: 3px;
-}
-.invitation .accept-option:hover{
-    background: rgba(0,100,0,0.5);
-    color: #fff;
+    padding: 0.3rem 0.8rem;
+    border-radius: 1px;
+    background: #006633;
 }
 .invitation .see-more-link{
     display: block;
     text-align: center;
-    color: gray;
+    color: #006633;
     text-decoration: none;
     margin-top: -1rem;
-    font-weight: 700;
+    font-weight: 500;
     text-transform: capitalize;
 }
