--- a/src/components/PeopleSuggestions/peoplesuggestions.css
+++ b/src/components/PeopleSuggestions/peoplesuggestions.css
@@ -1,27 +1,28 @@
 .suggestions{
-    box-shadow: 0 0 5px lavender;
+    box-shadow: 0 5px 5px lavender;
     margin-top: 1rem;
 }
 .suggestions h2{
     text-transform: capitalize;
     margin-bottom: 0.5rem;
-    color: gray;
+    color: #006633;
     font-weight: 400;
     padding-left: 0.2rem;
 }
 .suggestions .cards{
-    padding: 0 9% 1rem;
+    padding: 0 5% 1rem;
     display: flex;
     flex-wrap: wrap;
     -ms-flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 .suggestions .card{
-    width: 31%;
+    width: 23.5%;
     border: 1px solid gray;
     padding: 0;
-    padding-bottom: 1.3rem;
+    padding-bottom: 0.3rem;
     margin-bottom: 3rem;
+    margin-right: 0.6rem;
 }
 .suggestions .card:hover{
     box-shadow: 0 2px 8px 2px lavender;
@@ -32,8 +33,8 @@
     background: #006633;
 }
 .suggestions .cards img{
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     display: block;
     margin: 0 auto;
@@ -41,15 +42,29 @@
 }
 .suggestions .cards h4{
     font-weight: 700;
-    color: rgb(100,100,100);
+    color: #006633;
     text-transform: capitalize;
     font-size: 1rem;
     text-align: center;
+    margin-top: 0.2rem;
 }
 .suggestions .cards .position{
     font-size: 0.95rem;
     color: gray;
     text-align: center;
+}
+.suggestions .cards .location{
+    color: gray;
+    text-decoration: none;
+    text-align: center;
+    font-size: 0.82rem;
+    margin: 0.4rem 0;
+    display: block;
+}
+.suggestions .cards .fa-map-marker{
+    color: #006633;
+    margin-right: 0.5rem;
+    font-size: 1rem;
 }
 .suggestions .cards .stats{
     padding: 0 2rem 0 0.5rem;
@@ -59,6 +74,28 @@
     display: flex;
     justify-content: space-between;
     color: gray;
-    font-weight: 500;
-    font-size: 0.94rem;
+    font-weight: 400;
+    font-size: 0.9rem;
+}
+.suggestions .cards .connect{
+    background: #006633;
+    text-decoration: none;
+    text-align: center;
+    color: white;
+    display: block;
+    width: 90%;
+    margin: 0.8rem auto 0;
+    font-size: 0.9rem;
+    padding: 0.08rem 0;
+}
+.suggestions .see-more-link{
+    display: block;
+    text-align: center;
+    color: #006633;
+    text-decoration: none;
+    margin-top: -1rem;
+    padding-bottom: 1rem;
+    font-weight: 700;
+    text-transform: capitalize;
+    font-size: 1.2rem;
 }
