--- a/src/components/Groups/groups.css
+++ b/src/components/Groups/groups.css
@@ -6,13 +6,15 @@
     background-color: #006633;
     color: white;
     font-size: 1.4rem;
-    padding: 0.3rem 0 0.3rem 20%;
+    padding: 0.3rem 0;
+    text-align: center;
     font-weight: 500;
 }
 .groups .card-body{
     border: 1px solid #006633;
     padding-left: 20%;
     padding-bottom: 0.2rem;
+    padding-right: 20%;
 }
 .groups .card-body .group-link{
     color: #006633;
@@ -25,4 +27,5 @@
 .groups .card-body .groups-icon{
     margin-left: -18%;
     margin-right: 10%;
+    color: #006633;
 }
